<resources>
    <string name="app_name">LogIn</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="user_validation">Validating user, please wait…</string>
</resources>
